Correcioń de errores

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\alber\\AppData\\Roaming\\jmonkeyplatform\\dev\\build.properties
+user.properties.file=/home/alberto/.jmonkeyplatform/dev/build.properties
